--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
  </head>
  <body>
   <center>
+   <div class="main">
    <h1>Lucky Dip</h1>
    <div id='names'>
     <input id="text" type="text"
@@ -16,6 +17,7 @@
     <br><button
      onclick="chooseWinner()"
      id="choose">Choose</button>
+   </div>
    </div>
    <div id="namearea">
    </div>
