--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <input id="text" type="text"
      placeholder="Add a name"><button
      id="add"
-     onclick="Addname()">></button>
+     onclick="Addname()">❯</button>
     <br><button
      onclick="chooseWinner()"
      id="choose">Choose</button>
    </div>
-   </div>
+   </div></center>
    <div id="namearea">
    </div>
-  </center>
+ 
   <script src="script.js"></script>
  </body>
 </html>
