--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
      placeholder="Add a name"><button
      id="add"
      onclick="Addname()">❯</button>
-    <br><button
+    <br>
+     <label class="custom-checkbox">
+      <input type="checkbox">
+      <span class="checkmark"></span>Auto-Disable</label><br>
+    <button
      onclick="chooseWinner()"
      id="choose">Choose</button>
    </div>
