--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      onclick="Addname()">❯</button>
     <br>
      <label class="custom-checkbox">
-      <input type="checkbox">
+      <input id="check" type="checkbox">
       <span class="checkmark"></span>Auto-Disable</label><br>
     <button
      onclick="chooseWinner()"
