--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <br>
      <label class="custom-checkbox">
       <input id="check" type="checkbox">
-      <span class="checkmark"></span>Auto-Disable</label><br>
+      <span class="checkmark"></span><p>Auto-Disable</p></label><br>
     <button
      onclick="chooseWinner()"
      id="choose">Choose</button>
